--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "body-parser": "^1.15.1",
     "bower": "^1.8.0",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^2.0.0",
     "express": "^4.13.4",
     "express-session": "^1.14.2",
     "mongoose": "^4.4.15",
     "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {},
